# autonomy_stack_go2

./: .gitignore  README.md  system_real_robot.sh  system_real_robot_with_route_planner.sh  system_simulation.sh  system_simulation_with_route_planner.sh  unitree_setup.sh
.github/workflows/: ros_build.yaml
src/base_autonomy/local_planner/: CMakeLists.txt  package.xml
src/base_autonomy/local_planner/launch/: local_planner.launch
src/base_autonomy/local_planner/paths/: path_generator.m
src/base_autonomy/local_planner/src/: localPlanner.cpp  pathFollower.cpp
src/base_autonomy/sensor_scan_generation/: CMakeLists.txt  package.xml
src/base_autonomy/sensor_scan_generation/launch/: sensor_scan_generation.launch
src/base_autonomy/sensor_scan_generation/src/: sensorScanGeneration.cpp
src/base_autonomy/terrain_analysis/: CMakeLists.txt  package.xml
src/base_autonomy/terrain_analysis/launch/: terrain_analysis.launch
src/base_autonomy/terrain_analysis/src/: terrainAnalysis.cpp
src/base_autonomy/terrain_analysis_ext/: CMakeLists.txt  package.xml
src/base_autonomy/terrain_analysis_ext/launch/: terrain_analysis_ext.launch
src/base_autonomy/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
src/base_autonomy/vehicle_simulator/: CMakeLists.txt  package.xml
src/base_autonomy/vehicle_simulator/launch/: system_real_robot.launch  system_real_robot_with_route_planner.launch  system_simulation.launch  system_simulation_with_route_planner.launch  vehicle_simulator.launch
src/base_autonomy/vehicle_simulator/mesh/unity/: readme.txt
src/base_autonomy/vehicle_simulator/rviz/: vehicle_simulator.rviz
src/base_autonomy/vehicle_simulator/src/: sim_image_repub.cpp  vehicleSimulator.cpp
src/base_autonomy/visualization_tools/: CMakeLists.txt  package.xml
src/base_autonomy/visualization_tools/launch/: visualization_tools.launch
src/base_autonomy/visualization_tools/scripts/: realTimePlot.py
src/base_autonomy/visualization_tools/src/: visualizationTools.cpp
src/base_autonomy/waypoint_example/: package.xml
src/base_autonomy/waypoint_example/data/: boundary.ply  waypoints.ply
src/base_autonomy/waypoint_example/launch/: waypoint_example.launch
src/base_autonomy/waypoint_example/src/: waypointExample.cpp
src/route_planner/far_planner/: CMakeLists.txt
src/route_planner/far_planner/config/: default.yaml
src/route_planner/far_planner/include/far_planner/: far_planner.h  utility.h
src/route_planner/far_planner/launch/: far_planner.launch
src/route_planner/far_planner/rviz/: default.rviz
src/route_planner/far_planner/src/: far_planner.cpp
src/slam/point_lio_unilidar/: CMakeLists.txt  package.xml
src/slam/point_lio_unilidar/config/: utlidar.yaml
src/slam/point_lio_unilidar/include/: common_lib.h
src/slam/point_lio_unilidar/launch/: mapping_utlidar.launch
src/slam/point_lio_unilidar/rviz_cfg/: loam_livox.rviz  loam_livox2.rviz
src/slam/point_lio_unilidar/src/: IMU_Processing.hpp  laserMapping.cpp  parameters.cpp  parameters.h  preprocess.cpp  preprocess.h
src/utilities/calibrate_imu/: CMakeLists.txt  package.xml
src/utilities/calibrate_imu/src/: calibrate_imu.cpp
src/utilities/teleop_rviz_plugin/src/: teleop_panel.cpp  teleop_panel.h
src/utilities/teleop_rviz_plugin_plus/: CMakeLists.txt  package.xml  plugin_description.xml
src/utilities/teleop_rviz_plugin_plus/src/: drive_widget.cpp  drive_widget.h  teleop_panel.cpp  teleop_panel.h
src/utilities/transform_sensors/: package.xml  setup.cfg  setup.py
src/utilities/transform_sensors/transform_sensors/: transform_everything.py
src/utilities/unitree_pkgs/go2_h264_repub/: CMakeLists.txt  go2_h264_repub  package.xml
src/utilities/unitree_pkgs/go2_h264_repub/src/: go2_h264_repub.cpp
src/utilities/unitree_pkgs/go2_sport_api/: CMakeLists.txt  package.xml
src/utilities/unitree_pkgs/go2_sport_api/src/: vel_ctrl_repub.cpp
src/utilities/unitree_pkgs/unitree_go/msg/: Go2FrontVideoData.msg
src/utilities/waypoint_rviz_plugin/: package.xml
